Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -174,11 +174,6 @@
        "      <td>Uranus</td>\n",
        "      <td>light blue</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Neptune</td>\n",
-       "      <td>dark blue</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -191,11 +186,10 @@
        "3     Mars         red\n",
        "4  Jupiter      orange\n",
        "5   Saturn       hazel\n",
-       "6   Uranus  light blue\n",
-       "7  Neptune   dark blue"
+       "6   Uranus  light blue"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +202,7 @@
     "# 3) add column name\n",
     "df.columns = [x[0] for x in c.description]\n",
     "# 4) view data\n",
-    "df.he"
+    "df.head(7)"
    ]
   },
   {
