Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,32 +164,20 @@
        "      <td>Jupiter</td>\n",
        "      <td>orange</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Saturn</td>\n",
-       "      <td>hazel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Uranus</td>\n",
-       "      <td>light blue</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      name       color\n",
-       "0  Mercury        gray\n",
-       "1    Venus      yellow\n",
-       "2    Earth        blue\n",
-       "3     Mars         red\n",
-       "4  Jupiter      orange\n",
-       "5   Saturn       hazel\n",
-       "6   Uranus  light blue"
+       "      name   color\n",
+       "0  Mercury    gray\n",
+       "1    Venus  yellow\n",
+       "2    Earth    blue\n",
+       "3     Mars     red\n",
+       "4  Jupiter  orange"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +190,7 @@
     "# 3) add column name\n",
     "df.columns = [x[0] for x in c.description]\n",
     "# 4) view data\n",
-    "df.head(7)"
+    "df.head()"
    ]
   },
   {
