Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -140,21 +140,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Mercury</td>\n",
-       "      <td>gray</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Venus</td>\n",
-       "      <td>yellow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Earth</td>\n",
-       "      <td>blue</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Mars</td>\n",
        "      <td>red</td>\n",
@@ -164,20 +149,35 @@
        "      <td>Jupiter</td>\n",
        "      <td>orange</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Saturn</td>\n",
+       "      <td>hazel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Uranus</td>\n",
+       "      <td>light blue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Neptune</td>\n",
+       "      <td>dark blue</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      name   color\n",
-       "0  Mercury    gray\n",
-       "1    Venus  yellow\n",
-       "2    Earth    blue\n",
-       "3     Mars     red\n",
-       "4  Jupiter  orange"
+       "      name       color\n",
+       "3     Mars         red\n",
+       "4  Jupiter      orange\n",
+       "5   Saturn       hazel\n",
+       "6   Uranus  light blue\n",
+       "7  Neptune   dark blue"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
     "# 3) add column name\n",
     "df.columns = [x[0] for x in c.description]\n",
     "# 4) view data\n",
-    "df.head()"
+    "df.tail()"
    ]
   },
   {
